# multimeter

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  client.cpp  client.h  main.cpp  main.qml  server.cpp  server.h  server_main.cpp  socket.cpp  socket.h  utils.h
